auth_service/infra/k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: microservices
  labels:
    app: auth-service
    version: 1.0.0
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
